@@ -106,8 +106,12 @@
 									<span id="nm01">Base Stats</span>
 								</div>
 								<div style="float: right; padding-right: 3px;">
+									<input id="lab0" name="vanilla" onclick="ClickWeaponType(0) | WeaponSet2() | PopulateCards();" type="checkbox">
+									<label for="lab0"><span id="nm079">Vanilla</span></label> / 
 									<input id="lab1" name="A_youshi" onclick="calc()" type="checkbox">
-									<label for="lab1"><span id="nm078">Adopted</span></label> / <input id="lab2" name="BLVauto" checked="checked" type="checkbox"><label for="lab2"><span id="nm02">Auto Adjust Base Level</span></label>
+									<label for="lab1"><span id="nm078">Adopted</span></label> / 
+									<input id="lab2" name="BLVauto" checked="checked" type="checkbox">
+									<label for="lab2"><span id="nm02">Auto Adjust Base Level</span></label>
 								</div>
 								<div style="clear: both;"></div>
 							</td>
