@@ -1004,3 +1004,6 @@ ME_ENCHANTABLE = [
 	,[1454,0] //Stem Whip [1]
 	,[1622,0] //Rosevine
 ];
+//exceptions list for items and cards disabled in vanilla
+restrictedItems = [319,347,348,444,576,603,604,605,606,1320,1329,1334,1336,1339,1340,1344,1348,1354,1356,1365,1371,1375,1376,1377,1378,1379,1380,1381,1382,1383,1384,1385,1386,1387,1388,1389,1390,1391,1393,1491,1492,1493,1522,1526,1548,1560,1607,1608,1609,1610,1615];
+restrictedCards = [32,42,44,45,47,52,95,119,120,126,127,134,136,138,140,141,152,161,162,166,178,219,255,256,277,284,310,312,313,320,322,323,332,338,349,357,361,363,374,375,392,394,404,409,420,421,423,424,425,463,475,478,486,492,515,521,526,529,532];
